[package]
name = "invoicekit-intake-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-intake-ocr"
publish = false

[lib]
name = "invoicekit_intake_ocr"
path = "src/lib.rs"

[lints]
workspace = true
