# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors

[package]
name = "invoicekit-intake-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit intake OCR substrate — typed OcrProvider trait + Mock impl + Layer 3 (PaddleOCR) + Layer 4 (SmolDocling-256M ONNX) provider stubs. Live ONNX runtime wiring lands in a follow-up intake-ocr-onnx crate."
publish = false

[lib]
name = "invoicekit_intake_ocr"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[lints]
workspace = true
