[package]
name = "invoicekit-intake-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-intake-pdf"
publish = false

[lib]
name = "invoicekit_intake_pdf"
path = "src/lib.rs"

[dependencies]
lopdf = { version = "0.36", default-features = false }
thiserror.workspace = true

[lints]
workspace = true
