[package]
name = "invoicekit-intake-vlm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-intake-vlm"
publish = false

[lib]
name = "invoicekit_intake_vlm"
path = "src/lib.rs"

[lints]
workspace = true
