# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors

[package]
name = "invoicekit-intake-vlm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit intake VLM substrate — typed VlmProvider trait + Mock impl + a Qwen2.5-VL-7B provider wrapper (retry/backoff/cost telemetry over an injectable transport seam; no cloud inference or HTTP client in this crate). Live HTTP wiring lands in a follow-up intake-vlm-http crate."
publish = false

[lib]
name = "invoicekit_intake_vlm"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
